--- a/Main.css
+++ b/Main.css
@@ -8,3 +8,18 @@
 	border-radius: 30px; 
 	background-color: red; 
 }
+
+#led{
+	display: inline-block;
+	background-color: black;
+	height: 90px;
+	width: 90px;
+	border-radius: 50px;
+	border-color: gray;
+	border-width: 5px;
+	border-style: solid;
+}
+
+.led_encendido{
+	background-color: red !important;
+}
